--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -1,6 +1,19 @@
 .button {
+  font-family: 'PT Sans', Helvetica, sans-serif;
+  font-size: 17px;
   border: none;
   border-radius: 4px;
   background-color: #07d79c;
-  box-shadow: 0px 3px 14.7px 0.3px rgba(38, 46, 115, 0.14);
+  outline: none;
+  text-decoration: none;
+  cursor: pointer;
+  &:hover {
+    border: none;
+    background-color: #33dcaa;
+  }
+  &:active {
+    border: none;
+    background-color: #05c093;
+    outline: none;
+  }
 }
