--- a/src/components/layout/style.scss
+++ b/src/components/layout/style.scss
@@ -1,4 +1,5 @@
 .layout {
-  background: url("../../../public/images/registration_bg.jpg") no-repeat;
-  background-size: 100%;
+  background: url("./images/bg.jpg") no-repeat center;
+  background-size: cover;
+  height: 100%;
 }
