--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,12 @@
+html,
 body {
   padding: 0;
-  margin: auto;
-  width: 900px;
+  margin: 0;
   font-family: 'PT Sans', sans-serif;
+  height: 100%;
+}
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
